--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "swiper": "^11.2.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
