--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.0",
+    "react-router-dom": "^7.6.1",
+    "react-swipeable": "^7.0.2",
     "swiper": "^11.2.7",
     "zustand": "^5.0.5"
   },
